tests/negative/gold/prefix_test.gold
tests/negative/prefix_test.toit:6:5: error: Can't assign to unknown 'unresolved'
  ++unresolved
    ^~~~~~~~~~
tests/negative/prefix_test.toit:7:5: error: Can't assign to unknown 'unresolved'
  ++unresolved
    ^~~~~~~~~~
Compilation failed.
